--- a/webscraping_fake_jobs.ipynb
+++ b/webscraping_fake_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "591116e8",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b69160fd",
    "metadata": {},
    "outputs": [],
@@ -4077,10 +4077,9 @@
    "source": [
     "#b. Now, use what you did for the first title, but extract the job title for all jobs on this page. Store the results in a list.\n",
     "\n",
-    "#find all jobs \n",
+    "#find all \n",
     "all_jobs = soup.find_all('h2')\n",
     "\n",
-    "#create empty list\n",
     "job_titles = [job.text.strip() for job in all_jobs]\n",
     "\n"
    ]
@@ -4119,7 +4118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7d3ed95b",
    "metadata": {},
    "outputs": [],
@@ -4129,7 +4128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "366867a3",
    "metadata": {},
    "outputs": [
@@ -4273,7 +4272,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4294,7 +4293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "675502bf",
    "metadata": {},
    "outputs": [
@@ -4463,7 +4462,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4489,7 +4488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2bf738",
+   "id": "747ceb7a",
    "metadata": {},
    "source": [
     "3. Finally, we want to get the job description text for each job.  \n",
@@ -4500,8 +4499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "07266ebd",
+   "execution_count": 14,
+   "id": "52e4af95",
    "metadata": {},
    "outputs": [
     {
@@ -4510,22 +4509,22 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html'\n",
-    "response = requests.get(url)\n",
-    "soup = BS(response.text)\n",
-    "response"
+    "url2 = 'https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html'\n",
+    "response2 = requests.get(url2)\n",
+    "soup2 = BS(response2.text)\n",
+    "response2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "55e51e58",
+   "execution_count": 15,
+   "id": "b090629e",
    "metadata": {},
    "outputs": [
     {
@@ -4589,13 +4588,13 @@
     }
    ],
    "source": [
-    "print(soup.prettify())"
+    "print(soup2.prettify())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "eb568b56",
+   "execution_count": 16,
+   "id": "0022a9cb",
    "metadata": {},
    "outputs": [
     {
@@ -4604,7 +4603,7 @@
        "<p>Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.</p>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4612,13 +4611,13 @@
    "source": [
     "#a. Start by looking at the page for the first job, https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html. Using BeautifulSoup, extract the job description paragraph.  \n",
     "\n",
-    "soup.find('p', 'class' == 'content')"
+    "soup2.find('p', 'class' == 'content')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ca70ffe8",
+   "execution_count": 17,
+   "id": "4ef8f1d7",
    "metadata": {},
    "outputs": [
     {
@@ -4627,18 +4626,18 @@
        "'Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup.find('p', 'class' == 'content').text"
+    "soup2.find('p', 'class' == 'content').text"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "98769bc8",
+   "id": "c95954f9",
    "metadata": {},
    "source": [
     "b. We want to be able to do this for all pages. Write a function which takes as input a url and returns the description text on that page. For example, if you input \"https://realpython.github.io/fake-jobs/jobs/television-floor-manager-8.html\" into your function, it should return the string \"At be than always different American address. Former claim chance prevent why measure too. Almost before some military outside baby interview. Face top individual win suddenly. Parent do ten after those scientist. Medical effort assume teacher wall. Significant his himself clearly very. Expert stop area along individual. Three own bank recognize special good along.\".  "
@@ -4646,38 +4645,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9cf025f",
+   "execution_count": 18,
+   "id": "14a18d2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_descriptions(url):\n",
     "    response = requests.get(url)\n",
     "    soup = BS(response.text)\n",
-    "    paragraphs = soup.find_all('p')\n",
-    "    print(paragraphs)"
+    "    paragraphs = soup.find('p', 'class' == 'content')\n",
+    "    return paragraphs.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8613b45f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'At be than always different American address. Former claim chance prevent why measure too. Almost before some military outside baby interview. Face top individual win suddenly. Parent do ten after those scientist. Medical effort assume teacher wall. Significant his himself clearly very. Expert stop area along individual. Three own bank recognize special good along.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_descriptions('https://realpython.github.io/fake-jobs/jobs/television-floor-manager-8.html')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4420fe23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89f11a56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "269ec9c9",
+   "id": "07463a9c",
    "metadata": {},
    "outputs": [],
    "source": []
